fix(Sonar): clean some Sonar issues